Update workflow to use calculate-version action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,31 +46,11 @@ jobs:
           login-server: ${{ secrets.REGISTRY_SERVER }}
       
       - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
-        name: Parse Porter manifest
-        id: parse_porter_manifest
-        uses: endjin/CNAB.Quickstarts.GitHub.Actions/parse-porter-manifest@master
+        name: Calculate Version
+        id: calculate_version
+        uses: endjin/CNAB.Quickstarts.GitHub.Actions/calculate-version@master
         with:
           manifest_path: ${{ steps.validate_and_detect_qs_changes.outputs.quickstart_solution_path }}/porter.yaml
-
-      - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
-        name: Write temporary GitVersion config file
-        run: |
-          GITVERSION_CONFIG_PATH=$GITHUB_WORKSPACE/${{ steps.validate_and_detect_qs_changes.outputs.quickstart_solution_path }}/gitversion.yml
-          CONTENTS="next-version: ${{ steps.parse_porter_manifest.outputs.version }}"
-          echo "Writing temporary Gitversion config file with contents '$CONTENTS' to path '${GITVERSION_CONFIG_PATH}'"
-          echo $CONTENTS > $GITVERSION_CONFIG_PATH
-
-      - name: Set GitVersion file
-        uses: docker://gittools/gitversion:5.0.2-linux
-        with:
-          args: '-nocache -output buildserver -exec /bin/bash -execargs "-c \"echo $GitVersion_FullSemVer > /github/workspace/version.txt\""'
-
-      - name: Set GitVersion
-        id: set_gitversion
-        run: |
-          FULLSEMVER=$(cat version.txt)
-          echo ::set-env name=fullsemver::$FULLSEMVER
-          echo ::set-output name=fullsemver::$FULLSEMVER
 
       - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
         name: Install Porter
@@ -83,8 +63,8 @@ jobs:
         uses: endjin/CNAB.Quickstarts.GitHub.Actions/replace-version-and-registry@master
         with:
           manifest_path: ${{ steps.validate_and_detect_qs_changes.outputs.quickstart_solution_path }}/porter.yaml
-          version: ${{ steps.set_gitversion.fullsemver }}
-          tag: ${{ steps.set_gitversion.fullsemver }}
+          version: ${{ steps.calculate_version.fullsemver }}
+          tag: ${{ steps.calculate_version.fullsemver }}
           registry: ${{ secrets.REGISTRY_SERVER }}
 
       - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
