--- a/porter/hello-world/porter.yaml
+++ b/porter/hello-world/porter.yaml
@@ -3,11 +3,11 @@
 # See https://porter.sh/authoring-bundles for documentation on how to configure your bundle
 # Uncomment out the sections below to take full advantage of what Porter can do!
 
-name: HELLO
-version: 1.0.1
+name: hello-world
+version: 1.0.2
 description: "An example Porter configuration"
-invocationImage: cnabquickstarts.azurecr.io/porter/hello-world:1.0.1
-tag: cnabquickstarts.azurecr.io/porter/hello-world/bundle:1.0.1
+invocationImage: cnabquickstarts.azurecr.io/porter/hello-world:1.0.2
+tag: cnabquickstarts.azurecr.io/porter/hello-world/bundle:1.0.2
 
 credentials:
 - name: password
