Add terraform mixin

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
         uses: endjin/CNAB.Quickstarts.GitHub.Actions/install-porter@master
         with:
           porter_version: v0.17.1-beta.1
+          mixins: exec,kubernetes,helm,azure,terraform # TODO: infer from porter manifest
 
       - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
         name: Patch version and registry for bundle and invocation image
