--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,8 @@ jobs:
         uses: endjin/CNAB.Quickstarts.GitHub.Actions/replace-version-and-registry@master
         with:
           manifest_path: ${{ steps.validate_and_detect_qs_changes.outputs.quickstart_solution_path }}/porter.yaml
-          version: ${{ steps.calculate_version.outputs.nuget_version_v2 }}
-          tag: ${{ steps.calculate_version.outputs.nuget_version_v2 }}
+          version: ${{ steps.calculate_version.outputs.version }}
+          tag: ${{ steps.calculate_version.outputs.version }}
           registry: ${{ secrets.REGISTRY_SERVER }}
 
       - if: steps.validate_and_detect_qs_changes.outputs.build_is_required == 'true' && steps.validate_and_detect_qs_changes.outputs.quickstart_tool == 'porter'
@@ -90,7 +90,7 @@ jobs:
         uses: endjin/CNAB.Quickstarts.GitHub.Actions/replace-version-and-registry@master
         with:
           manifest_path: ${{ steps.validate_and_detect_qs_changes.outputs.quickstart_solution_path }}/porter.yaml
-          version: ${{ steps.calculate_version.outputs.nuget_version_v2 }}
+          version: ${{ steps.calculate_version.outputs.version }}
           tag: 'latest'
           registry: ${{ secrets.REGISTRY_SERVER }}
 
